Started on contact page

--- a/components/Header_components/header.module.css
+++ b/components/Header_components/header.module.css
@@ -1,5 +1,6 @@
 .Header_div {
     padding-top: 10px;
+    margin: 0 25px;
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-end;
