--- a/components/Hero_component/Hero.module.css
+++ b/components/Hero_component/Hero.module.css
@@ -1,11 +1,15 @@
 .container {
     height: 100vh;
+    width: auto;
+    margin: auto;
+    margin-top: 2rem;
 }
 
 .heroSlide {
   position: relative;
+  top: 0;
   width: 100%;
-  height: 55vw;
+  height: 90vh;
   overflow: hidden;
 }
 
@@ -15,6 +19,11 @@
     top: 0;
     left: 0;
     width: 45%;
+    margin-top: 2rem;
+}
+
+.headings > h5 {
+    margin-top: 1rem;
 }
 
 .title {
@@ -25,16 +34,15 @@
     height: 60%;
 }
 
-.title > h1 {
+.title h1 {
      position: absolute;
-     top: 50%;
-    left: 50%;
-    transform: translate(-75%, -50%);
-    white-space: nowrap;
+    white-space: pre-line;
+    font-size: 4rem;
+    text-align: center;
 }
 
 .slideContainer {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     width: 55%;
