--- a/components/Header_components/header.module.css
+++ b/components/Header_components/header.module.css
@@ -1,10 +1,19 @@
+
 .Header_div {
     padding-top: 10px;
     margin: 0 25px;
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-end;
-    color: blue;
+    position: sticky;
+    top: 0;
+    background-color: hsla(0, 0%, 25%, 1);
+    z-index: 1000;
+}
+
+.Header_div * {
+    margin: 0;
+    padding: 0;
 }
 
 .Header_nav {
