--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -1,24 +1,72 @@
+.pageContainer {
+    width: 90%;
+    height: 85vh;
+    margin: 0 auto;
+    overflow: hidden;
+}
 .projects {
-    width: 100%;
-    height: 75vh;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    gap: 2.5rem;
-    overflow: scroll;
+    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 428px) {
+
+    .projects {
+        width: 100%;
+        height: 75vh;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 2.5rem;
+        overflow: scroll;
+    }
     .projectCategory {
         position: relative;
         flex: 0 1 90%;
         height: 75vh;
         box-shadow: 0 0.5rem 1rem hsla(200, 60%, 99%, 1);
-        border: .25rem solid hsla(200, 60%, 99%, 1);
         border-radius: .25rem;
         color: hsla(0, 0%, 25%, 1);
         background-color: hsla(200, 60%, 99%, 1);
 
+    }
+
+    .scrollButton_Div {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .scrollButton_Div > button {
+        width: 75px;
+        height: 45px;
+        border: none;
+        background-color: hsla(200, 60%, 99%, .15);
+        border-radius: 10%;
+        box-shadow:5px 5px 45px hsla(0, 0%, 25%, 1);
+    }
+}
+
+@media screen and (min-width: 429px) and (max-width: 926px) {
+    .projects {
+        width: 90vw;
+        height: 60vh;
+        flex-flow: column wrap;
+        justify-content: center;
+        gap: 2.5rem;
+        overflow: scroll;
+    }
+
+    .projectCategory {
+        position: relative;
+        flex: 0 1 60vh;
+        width: 90vw;
+        box-shadow: 0 0.5rem 1rem hsla(200, 60%, 99%, 1);
+        border-radius: .25rem;
+        color: hsla(0, 0%, 25%, 1);
+        background-color: hsla(200, 60%, 99%, 1);
     }
 
     .scrollButton_Div {
