--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -87,3 +87,43 @@
         box-shadow:5px 5px 45px hsla(0, 0%, 25%, 1);
     }
 }
+
+@media screen and (min-width: 927px) {
+
+    .projects {
+        width: 100%;
+        height: 75vh;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 2.5rem;
+        overflow: scroll;
+    }
+    .projectCategory {
+        position: relative;
+        flex: 0 1 90%;
+        height: 75vh;
+        box-shadow: 0 0.5rem 1rem hsla(200, 60%, 99%, 1);
+        border-radius: .25rem;
+        color: hsla(0, 0%, 25%, 1);
+        background-color: hsla(200, 60%, 99%, 1);
+
+    }
+
+    .scrollButton_Div {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .scrollButton_Div > button {
+        width: 75px;
+        height: 45px;
+        border: none;
+        background-color: hsla(200, 60%, 99%, .15);
+        border-radius: 10%;
+        box-shadow:5px 5px 45px hsla(0, 0%, 25%, 1);
+    }
+}
